fixed badge card on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -245,3 +245,7 @@ section{
 .black-triangle .shape-fill {
   fill: #0E0E0E;
 }
+
+.asnaji-card{
+  width: 424px;
+}
